# mlc-vla

./: .gitignore  README.md  tvm.code-workspace
docs/: M0.md  M1.md  arch.md
docs/optimize/: tvm_in_thor.md  tvm_vs_trt.md
docs/p3/: M0.md  M1.md  M2.md  M3.md  arch.md  finished.md  run.md
python/: pyproject.toml
python/mlc_vla/: __init__.py  bench_kv.py  compare.py  compare_embed.py  compare_kv.py  compare_loop.py  compare_p3.py  compare_pad.py  compare_quant.py  compile.py  compile_quant.py  libinfo.py  openpi_ref.py  plannn3_compile.py  plannn3_decode.py  plannn3_runner.py  quant.py  sample.py
python/mlc_vla/model/: __init__.py
python/mlc_vla/model/pi0/: __init__.py  gemma_dual.py  pi0_config.py  pi0_loader.py  pi0_model.py  siglip.py
python/mlc_vla/model/plannn3/: __init__.py  dinov3.py  plannn3_config.py  plannn3_loader.py  plannn3_model.py
python/tests/: conftest.py  test_compile_and_run.py  test_config_interface.py  test_cublas_guard.py  test_numerical_gates.py  test_pizero_runner.py
resource/: README.md
resource/plannn3/: data.json  infer.py  io_spec.json  model_config.json
resource/plannn3/model/: __init__.py  build.py  common.py  data_define.py  misc.py  network.py  weights.py
resource/plannn3/model/encoder/: __init__.py  dinov3_encoder.py  navigation_encoder_2.py  point_encoder.py  polyline_encoder.py  pos_embed_sincos.py  trajectory_encoder.py  trajectory_encoder_v2.py  visual_encoder.py
resource/plannn3/model/head/: __init__.py  trajectory_head.py
